--- a/.github/workflows/macos14.yml
+++ b/.github/workflows/macos14.yml
@@ -123,7 +123,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/nuget/
           otool -L libOpenCvSharpExtern.dylib
-          nm libOpenCvSharpExtern.dylib
+          nm libOpenCvSharpExtern.dylib > /dev/null 2>&1 || true
 
           # Properly escape the internal quotes and newline
           echo -ne "#include <stdio.h>\nint core_Mat_sizeof(); int main(){ int i=core_Mat_sizeof(); printf(\"sizeof(Mat) = %d\\n\", i); return 0; }" > test.c
