--- a/.github/workflows/macos14.yml
+++ b/.github/workflows/macos14.yml
@@ -125,8 +125,17 @@ jobs:
           otool -L libOpenCvSharpExtern.dylib
           nm libOpenCvSharpExtern.dylib > /dev/null 2>&1 || true
 
-          # Properly escape the internal quotes and newline
-          echo -ne "#include <stdio.h>\nint core_Mat_sizeof(); int main(){ int i=core_Mat_sizeof(); printf(\"sizeof(Mat) = %d\\n\", i); return 0; }" > test.c
+          # Use a here-doc to generate test.c without needing to escape quotes
+          cat <<'EOF' > test.c
+          #include <stdio.h>
+          int core_Mat_sizeof();
+          int main(){
+              int i = core_Mat_sizeof();
+              printf("sizeof(Mat) = %d\n", i);
+              return 0;
+          }
+          EOF
+          
           gcc -I./ -L./ test.c -o test -lOpenCvSharpExtern
 
           # macOS uses DYLD_LIBRARY_PATH to find .dylibs
