--- a/.github/workflows/macos14.yml
+++ b/.github/workflows/macos14.yml
@@ -92,6 +92,7 @@ jobs:
             -DOPENCV_ENABLE_NONFREE=ON \
             -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/opencv_macos \
             -DCMAKE_OSX_ARCHITECTURES=${{ env.CMAKE_OSX_ARCHITECTURES }} \
+            -DWITH_ORBBEC=OFF \
             ..
 
           make -j2
